# Metaresc

./: .gitignore  .gitmodules  AUTHORS  COPYING  ChangeLog  Doxyfile  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac
.github/workflows/: test.yml
doc/: TODO
doc/css/: elements.css  reset.css  screen.css
doc/reference/: Makefile  reference.xml
doc/user-guide/: Makefile  customization.xsl  user-guide.xml
examples/: .gitignore  Makefile.am  anonymous_unions.c  array_metadata.c  arrays.c  arrays.h  basic.c  basic.h  bitfields.c  bitfields.h  builtins.c  builtins.h  builtins_auto.c  builtins_auto.h  decl_rarray.c  decl_rarray.h  deserialization_2_args.c  deserialization_3_args.c  deserializing_xml.c  double_pointer.c  dwarf.c  dwarf_types.c  emptystruct.c  emptystruct.h  enums.c  enums.h  enums_metadata.c  field_types.c  function_pointer_metadata.c  function_pointers.c  function_type.c  function_type.h  get_set_field.c  gjobs.c  gjobs.h  gjobs.xml  justabuiltin.c  load_cinit.c  load_json.c  load_scm.c  (+35 more)
gcov/: check_gcov.sh  configure_gcov.sh  counfigure_gcov
huge_enterprise_app/: Makefile  file.c.in  file.h.in  generate.sh  huge_enterprise_app.mk  main.c  test.sh
src/: .gitignore  Makefile.am  cinit_load.l  cinit_load.y  cinit_save.c  flt_values.h  json_load.l  json_load.y  json_save.c  lexer.h  metaresc.c  metaresc.h  mr_btree.c  mr_btree.h  mr_dwarf.c  mr_export.h.in  mr_extra.c  mr_hsort.c  mr_hsort.h  mr_ic.c  mr_ic.h  mr_load.c  mr_load.h  mr_message.c  mr_pp.sh  mr_print.c  mr_protos.h  mr_rbtree.c  mr_rbtree.h  mr_save.c  mr_save.h  mr_stringify.c  mr_stringify.h  mr_tsearch.c  mr_tsearch.h  mr_udo_init.c  mr_udo_init.h  mr_value.c  mr_value.h  reslib.c  (+26 more)
src/p99/: p99.h  p99_args.h  p99_block.h  p99_c99.h  p99_c99_default.h  p99_choice.h  p99_classification.h  p99_compiler.h  p99_defarg.h  p99_double.h  p99_enum.h  p99_for.h  p99_generated.h  p99_id.h  p99_if.h  p99_int.h  p99_list.h  p99_logical.h  p99_map.h  p99_new.h  p99_paste.h  p99_posix_default.h  p99_str.h  p99_swap.h  p99_type.h
tests/: .gitignore  Makefile.am  array.c  bitfield.c  bool.c  btree.c  char.c  complex_double.c  complex_float.c  complex_long_double.c  double.c  dw_export.c  dw_export.h  dw_mr_types.h  dw_types.c  dw_types_init.c  enum.c  expr.c  float.c  flt_values.h  function.c  generic_ic.c  gjobs.xml  highload.c  highload.h  ic.c  int.h  int128.c  int16.c  int32.c  int64.c  int8.c  json_cross_ref.c  long_double.c  mem_allocations.c  mem_failures.c  mem_failures.h  meta.h  meta_.h  mf_cinit_load.c  (+59 more)
